# flowdmr

./: .gitignore  Cargo.toml  Makefile  README.md
config/: sidecar.example.toml
crates/flowdmr-entity/: Cargo.toml  build.rs
crates/flowdmr-entity/src/: codec.rs  entity.rs  jitter.rs  lib.rs
crates/flowdmr-ipc/: Cargo.toml
crates/flowdmr-ipc/src/: lib.rs
crates/flowdmr-sidecar/: Cargo.toml
crates/flowdmr-sidecar/src/: config.rs  dashboard.rs  decoder.rs  main.rs  meta.rs  pcm.rs  recorder.rs  session.rs  status.rs  testinject.rs  wire.rs
deploy/: REMOTE-DECODER.md  build-tetra-codec.sh  flowdmr-sidecar.service  install-dsd-neo.sh  install-rtlsdr-v4.sh  install-sidecar-service.sh  rtl-gainsweep.sh  rtl-waterfall.sh  rtl_waterfall.py
docs/: ARCHITECTURE.md
integration/: COEXIST.md  apply.sh  flowstation-coexist.patch  revert.sh
