[package]
name = "flowdmr-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wire protocol shared by the FlowDMR sidecar and the FlowStation-side injection entity"

[dependencies]
# Intentionally zero dependencies: this crate is the contract shared by both
# the sidecar and the in-process FlowStation entity. Keep it tiny and stable.

[lints.clippy]
# none
